--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -4,5 +4,5 @@ ${ip}
 %{ endfor ~}
 
 [all:vars]
-ansible_ssh_private_key_file=./keyins.pem
+ansible_ssh_private_key_file=/home/ubuntu/keyins.pem
 ansible_user=ubuntu
