--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -1,6 +1,6 @@
 [ubuntu_nodes]
-%{ for ip in ubuntu_hosts ~}
-${ip}
+%{ for index, ip in ubuntu_hosts ~}
+ubuntu_node${index} ansible_host=${ip} ansible_ssh_common_args='-o ProxyJump=bastion_user@${bastion_hosts[index]}'
 %{ endfor ~}
 
 [bastion]
@@ -11,4 +11,4 @@ ${ip}
 [ubuntu_nodes:vars]
 ansible_ssh_private_key_file=/var/lib/jenkins/workspace/tool/keyins.pem
 ansible_user=ubuntu
-ansible_ssh_common_args='-o ProxyJump=ubuntu@{{bastion_hosts}}'
+
