--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -10,7 +10,7 @@ ubuntu_node${index} ansible_host=${ip} ansible_ssh_common_args='-o ProxyJump=bas
 %{ endfor ~}
 
 
-[ubuntu_nodes:vars]
+[all:vars]
 ansible_ssh_private_key_file=/var/lib/jenkins/workspace/tool/keyins.pem
 ansible_user=ubuntu
 
