--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -6,12 +6,12 @@ ${ip}
 
 [ubuntu_nodes]
 %{ for index, ip in ubuntu_hosts ~}
-ubuntu_node${index} ansible_host=${ip} ansible_ssh_common_args='-o ProxyJump=${bastion_user}@${bastion_hosts[index]} -W ${ip}:22'
+ubuntu_node${index} ansible_host=${ip} ansible_ssh_common_args='-o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ProxyCommand="ssh -A -i /var/lib/jenkins/workspace/tool/keyins.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyJump=${bastion_user}@${bastion_hosts[index]}" -W ${ip}:22'
 %{ endfor ~}
+
 
 
 [all:vars]
 ansible_ssh_private_key_file=/var/lib/jenkins/workspace/tool/keyins.pem
 ansible_user=ubuntu
-bastion_user=ubuntu
 
