--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -13,5 +13,5 @@ ubuntu_node${index} ansible_host=${ip} ansible_ssh_common_args='-o UserKnownHost
 
 [all:vars]
 ansible_ssh_private_key_file=/var/lib/jenkins/workspace/tool/keyins.pem
-ansible_user=jenkins
+ansible_user=ubuntu
 
